[gd_scene load_steps=37 format=2]

[ext_resource path="res://demos/lunar_lander/Lander/lander.gd" type="Script" id=1]
[ext_resource path="res://demos/lunar_lander/Lander/lander.png" type="Texture2D" id=2]
[ext_resource path="res://demos/lunar_lander/Lander/fire.png" type="Texture2D" id=3]
[ext_resource path="res://demos/lunar_lander/Lander/explosion.png" type="Texture2D" id=4]
[ext_resource path="res://demos/lunar_lander/Lander/flag.png" type="Texture2D" id=5]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 20 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 58, 72 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 58, 0, 58, 72 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 116, 0, 58, 72 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 72, 58, 72 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 58, 72, 58, 72 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 116, 72, 58, 72 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 58, 72 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 58, 0, 58, 72 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 116, 0, 58, 72 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 72, 58, 72 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 58, 72, 58, 72 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 116, 72, 58, 72 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=16]
radius = 28.0

[sub_resource type="CircleShape2D" id=17]
radius = 28.0

[sub_resource type="CircleShape2D" id=18]
radius = 184.676

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 864, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 960, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1056, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Lander" type="RigidBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 14 )
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Thrusters" type="Node2D" parent="."]

[node name="MainThruster" type="AnimatedSprite2D" parent="Thrusters"]
position = Vector2( 0, 9 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 8 )
frame = 2
speed_scale = 3.0
offset = Vector2( 0, 40 )
flip_v = true

[node name="LeftThruster" type="AnimatedSprite2D" parent="Thrusters"]
position = Vector2( -18, 0 )
rotation = -1.5708
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 15 )
frame = 4
speed_scale = 3.0

[node name="RightThruster" type="AnimatedSprite2D" parent="Thrusters"]
position = Vector2( 18, 0 )
rotation = -1.5708
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 15 )
frame = 5
speed_scale = 3.0
flip_v = true

[node name="Contacts" type="Node2D" parent="."]
position = Vector2( 0, -28.4412 )

[node name="LeftContact" type="Area2D" parent="Contacts"]

[node name="LeftCollider" type="CollisionShape2D" parent="Contacts/LeftContact"]
position = Vector2( -13, 44 )
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 16 )

[node name="RightContact" type="Area2D" parent="Contacts"]

[node name="RightCollider" type="CollisionShape2D" parent="Contacts/RightContact"]
position = Vector2( 13, 44 )
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 17 )

[node name="HullContact" type="Area2D" parent="Contacts"]

[node name="HullCollider" type="CollisionShape2D" parent="Contacts/HullContact"]
position = Vector2( 0, 20.5615 )
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 18 )

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2( 0, -4.8695 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="GroundCast" type="RayCast2D" parent="."]
target_position = Vector2( 0, 500 )

[node name="LeftCast" type="RayCast2D" parent="."]
target_position = Vector2( -500, 0 )

[node name="RightCast" type="RayCast2D" parent="."]
target_position = Vector2( 500, 0 )

[node name="Explosion" type="AnimatedSprite2D" parent="."]
visible = false
frames = SubResource( 31 )
speed_scale = 2.0

[node name="Flag" type="Sprite2D" parent="."]
visible = false
position = Vector2( 0, -8.74057 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )
[connection signal="body_entered" from="Contacts/LeftContact" to="." method="_on_LeftContact_body_entered"]
[connection signal="body_exited" from="Contacts/LeftContact" to="." method="_on_LeftContact_body_exited"]
[connection signal="body_entered" from="Contacts/RightContact" to="." method="_on_RightContact_body_entered"]
[connection signal="body_exited" from="Contacts/RightContact" to="." method="_on_RightContact_body_exited"]
[connection signal="body_entered" from="Contacts/HullContact" to="." method="_on_HullContact_body_entered"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
